5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1728_2496.log
== TEST (2019-05-13 18:39:24) 
-- CODE:
cont = 0
soma = 0
num = int(input("digite o numero: "))
while(num != -1):
	soma = soma + num
	cont = cont + 1
	num = int(input("digite o numero: "))
-- OUTPUT:
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:40:08) 
-- CODE:
cont = 0
soma = 0
num = int(input("digite o numero: "))
while(num != -1):
	soma = soma + num
	cont = cont + 1
	num = int(input("digite o numero: "))
if(cont > 0)
	print(round(soma, 2))
-- ERROR:
File "XXXX", line 8
    if(cont > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:40:24) 
-- CODE:
cont = 0
soma = 0
num = int(input("digite o numero: "))
while(num != -1):
	soma = soma + num
	cont = cont + 1
	num = int(input("digite o numero: "))
if(cont > 0)
	print(round(soma, 2))
-- ERROR:
File "XXXX", line 8
    if(cont > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:40:24) 
-- CODE:
cont = 0
soma = 0
num = int(input("digite o numero: "))
while(num != -1):
	soma = soma + num
	cont = cont + 1
	num = int(input("digite o numero: "))
if(cont > 0)
	print(round(soma, 2))
-- ERROR:
File "XXXX", line 8
    if(cont > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:40:24) 
-- CODE:
cont = 0
soma = 0
num = int(input("digite o numero: "))
while(num != -1):
	soma = soma + num
	cont = cont + 1
	num = int(input("digite o numero: "))
if(cont > 0)
	print(round(soma, 2))
-- ERROR:
File "XXXX", line 8
    if(cont > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:40:40) 
-- CODE:
cont = 0
soma = 0
num = int(input("digite o numero: "))
while(num != -1):
	soma = soma + num
	cont = cont + 1
	num = int(input("digite o numero: "))
if(cont > 0):
	print(round(soma, 2))
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:40:52) 
-- CODE:
cont = 0
soma = 0
num = int(input("digite o numero: "))
while(num != -1):
	soma = soma + num
	cont = cont + 1
	num = int(input("digite o numero: "))
if(cont > 0):
	print(round(soma, 2))
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:41:03) 
-- CODE:
cont = 0
soma = 0
num = int(input("digite o numero: "))
while(num != -1):
	soma = soma + num
	cont = cont + 1
	num = int(input("digite o numero: "))
if(cont > 0):
	print(round(soma, 2))
-- EXECUTION TIME:
0.170964
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 16:32:08) 
-- CODE:
cont = 0
soma = 0
num = int(input("digite o numero: "))
while(num != -1):
	soma = soma + num
	cont = cont + 1
	num = int(input("digite o numero: "))
if(cont > 0):
	print(round(soma, 2))
-- EXECUTION TIME:
0.215889
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
